--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,9 +95,11 @@ header li a {
     color: black;
 }
 
-header li:hover {
+header li a:hover {
     cursor: pointer;
     border-bottom: solid 4px #03A89E;
+    text-decoration: none;
+    color: black;
 }
 
 #content {
@@ -163,10 +165,16 @@ header li:hover {
     width: 150px;
     height: 150px;
 }
-#computer-skills li {
+#skills-level {
     display: inline-block;
 }
-
+#computer-skills span{
+    margin: 23px;
+    font-weight: bold;
+}
+#languages {
+    position: fixed;
+}
 #languages dt {
     font-weight: bold;
     font-size: 14px;
@@ -175,12 +183,14 @@ header li:hover {
 #languages dd {
     padding-bottom: 20px;
 }
-
+.lang {
+    display: inline-block;
+}
 progress {
     background-color: white;
     border: 2px solid #03A89E;
     height: 14px;
-    width: 400px;
+    width: 200px;
 }
 
 progress::-webkit-progress-value {
