--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,7 +114,7 @@ header li a:hover {
     position: absolute;
     top: 180px;
     left: 200px;
-    display: inline-block;
+    height: 100%;
 }
 
 #about,
@@ -122,12 +122,14 @@ header li a:hover {
 #interests,
 #skills,
 #contacts {
-    position: fixed;
+    height: 100%;
     overflow: hidden;
-    
+    position: fixed;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 #about {
-    height: 500px;
+    height: 100%;
 }
 #about h3 {
     font-size: 25px;
@@ -169,7 +171,7 @@ header li a:hover {
     display: inline-block;
 }
 #computer-skills span{
-    margin: 23px;
+    margin: 21px;
     font-weight: bold;
 }
 #languages dt {
