--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -1,32 +1,28 @@
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 850px) {
     body {
-        max-width: 500px;
-        min-width: 300px;
+        max-width: 850px;
         overflow-y: scroll;
         overflow-x: hidden;
         padding: 0;
-        margin: auto;
+        margin: 0 auto;
     }
     header {
         float: left;
-        width: 80%;
+        width: 100%;
         height: 100%;
         clear: right;
         position: relative;
         padding: 0;
-    }
-    #my-photo {
-        /*float: left;*/
-        clear: right;
+        margin: 0 auto;
     }
     header h1 {
-        /*float: left;*/
+        float: left;
         clear: right;
         width: 100%;
         border: 0;
     }
-    header li {
-        /*float: left;*/
+    header ul {
+        float: left;
         clear: right;
         width: 100%;
     }
